--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ djangorestframework-simplejwt = "^5.3.1"
 ruff = "^0.2.1"
 libcst = "^1.1.0"
 astor = "^0.8.1"
+typer = {extras = ["all"], version = "^0.9.0"}
 
 [build-system]
 requires = ["poetry-core"]
