--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,18 @@ ruff = "^0.2.1"
 libcst = "^1.1.0"
 astor = "^0.8.1"
 typer = {extras = ["all"], version = "^0.9.0"}
+pre-commit = "^3.6.2"
+
+[tool.isort]
+line_length = 119
+multi_line_output = 5
+
+[tool.yapf]
+align_closing_bracket_with_visual_indent = true
+based_on_style = "google"
+coalesce_brackets = true
+column_limit = 119
+dedent_closing_brackets = true
 
 [build-system]
 requires = ["poetry-core"]
