--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,11 +1,11 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
-  #   - repo: https://github.com/astral-sh/ruff-pre-commit
-  #     rev: v0.3.1
-  #     hooks:
-  #       - id: ruff
-  #       - id: ruff-format
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.3.1
+    hooks:
+      - id: ruff
+      - id: ruff-format
 
   - repo: https://github.com/pycqa/isort
     rev: 5.12.0
