--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,10 @@ pyyaml = "^6.0.1"
 djangorestframework-simplejwt = "^5.3.1"
 psycopg2 = "^2.9.9"
 daphne = "^4.1.0"
+pytest = "^8.0.2"
+pytest-xdist = "^3.5.0"
+pytest-django = "^4.8.0"
+model-bakery = "^1.17.0"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -30,6 +34,9 @@ colorlog = "^6.8.2"
 line_length = 119
 multi_line_output = 5
 
+[tool.ruff]
+extend-exclude = [".env", "djinn/code_generator/source/*.py"]
+
 [tool.yapf]
 align_closing_bracket_with_visual_indent = true
 based_on_style = "google"
@@ -37,6 +44,14 @@ coalesce_brackets = true
 column_limit = 119
 dedent_closing_brackets = true
 
+[tool.pytest.ini_options]
+DJANGO_SETTINGS_MODULE = "djinn.project.settings"
+django_find_project = false
+python_files = "test_*.py"
+testpaths = ["djinn"]
+filterwarnings = "ignore::DeprecationWarning:^(?!node\\.).*:"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
