--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,6 +5,7 @@ repos:
     rev: v0.3.1
     hooks:
       - id: ruff
+        args: [--fix]
       - id: ruff-format
 # - repo: https://github.com/pre-commit/mirrors-mypy
 #   rev: "v0.910"
