--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ pytest = "^8.0.2"
 pytest-xdist = "^3.5.0"
 pytest-django = "^4.8.0"
 model-bakery = "^1.17.0"
+django-cors-headers = "^4.3.1"
+requests = "^2.31.0"
 
 
 [tool.poetry.group.dev.dependencies]
