--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ line_length = 119
 multi_line_output = 5
 
 [tool.ruff]
-extend-exclude = [".env", "djinn/code_generator/src/source/*.py"]
+extend-exclude = [".env", "*/source/*.py"]
 lint.extend-select = ["I"]
 
 [tool.yapf]
