--- a/.github_actions/workflows/master.yml
+++ b/.github_actions/workflows/master.yml
@@ -38,4 +38,4 @@ jobs:
           END
       - name: Run deploy
         run: |
-          ssh target "cd djinn/ && docker-compose down && git pull && docker-compose build && docker-compose up -d --force-recreate"
+          ssh target "cd {{cookiecutter.module_name}}/ && docker-compose down && git pull && docker-compose build && docker-compose up -d --force-recreate"
