--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,10 +48,10 @@ column_limit = 119
 dedent_closing_brackets = true
 
 [tool.pytest.ini_options]
-DJANGO_SETTINGS_MODULE = "djinn.project.settings"
+DJANGO_SETTINGS_MODULE = "{{cookiecutter.project_slug}}.project.settings"
 django_find_project = false
 python_files = "test_*.py"
-testpaths = ["djinn"]
+testpaths = ["{{cookiecutter.project_slug}}"]
 filterwarnings = "ignore::DeprecationWarning:^(?!node\\.).*:"
 
 [build-system]
