--- a/{{cookiecutter.project_slug}}/.github/workflows/master.yml
+++ b/{{cookiecutter.project_slug}}/.github/workflows/master.yml
@@ -21,9 +21,9 @@ jobs:
     steps:
       - name: Configure SSH
         env:
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-          SSH_HOST: ${{ secrets.SSH_HOST }}
-          SSH_USER: ${{ secrets.SSH_USER }}
+          SSH_PRIVATE_KEY: {% raw %}${{ secrets.SSH_PRIVATE_KEY }}{% endraw %}
+          SSH_HOST: {% raw %}${{ secrets.SSH_HOST }}{% endraw %}
+          SSH_USER: {% raw %}${{ secrets.SSH_USER }}{% endraw %}
         run: |
           mkdir -p ~/.ssh/
           echo "$SSH_PRIVATE_KEY" > ~/.ssh/github
