--- a/{{cookiecutter.project_slug}}/.github/workflows/pr.yml
+++ b/{{cookiecutter.project_slug}}/.github/workflows/pr.yml
@@ -33,4 +33,4 @@ jobs:
         run: make test
         env:
           COOKING_CORE_SETTING_DATABASES: '{"default":{"HOST":"db"}}'
-          COOKING_CORE_SETTING_LOCAL_SETTINGS_PATH: "./cooking_core/project/settings/templates/settings.github.py"
+          COOKING_CORE_SETTING_LOCAL_SETTINGS_PATH: "./{{cookiecutter.package_name}}/project/settings/templates/settings.github.py"
